Actually saving the library to the libraryStorage
and adding tests for number of times callback has run

--- a/librarySystem/librarySystem.html
+++ b/librarySystem/librarySystem.html
@@ -42,7 +42,16 @@ tests({
     eq(librarySystem('fullName'), 'Gustav Larsson');
   },
   'The callback function is only run once': function() {
-    
+    var timesCallbackHasRun = 0;
+    librarySystem('myCallbackShouldRunOnce', [], function () {
+      timesCallbackHasRun++;
+      return 'something';
+    });
+
+    librarySystem('myCallbackShouldRunOnce');
+    librarySystem('myCallbackShouldRunOnce');
+
+    eq(timesCallbackHasRun, 1);
   }
 });
 </script>
